# clipp.torch

./: CMakeLists.txt  OpenCLIPP.h  OpenCLIPP.hpp  README.md  cl-files  clipp-scm-1.rockspec  ffi.lua  init.lua  test.lua
src/: OpenCL.h  programs
