CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(OpenCL REQUIRED)

INCLUDE_DIRECTORIES(. src)
ADD_DEFINITIONS(-std=c++0x)

FILE(GLOB FILTERS ./src/Programs/*.cpp)
FILE(GLOB HELPERS ./src/*.cpp)

ADD_LIBRARY(OpenCLIPP SHARED ./OpenCLIPP.cpp ${FILTERS} ${HELPERS})

TARGET_LINK_LIBRARIES(OpenCLIPP ${OPENCL_LIBRARIES})
