CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(OpenCL REQUIRED)

INCLUDE_DIRECTORIES(. src)
ADD_DEFINITIONS(-std=c++0x)

FILE(GLOB FILTERS src/Programs/*.cpp)
FILE(GLOB HELPERS src/*.cpp)
FILE(GLOB luasrc *.lua)
FILE(GLOB cl-files cl-files/*)

ADD_LIBRARY(clipp SHARED OpenCLIPP.cpp ${FILTERS} ${HELPERS})

TARGET_LINK_LIBRARIES(clipp ${OPENCL_LIBRARIES})

### Torch packages supposes libraries prefix is "lib"
SET_TARGET_PROPERTIES(clipp PROPERTIES
  PREFIX "lib"
  IMPORT_PREFIX "lib")
    
INSTALL(TARGETS clipp
  RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/clipp")

INSTALL(
  FILES
  ${cl-files}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/cl-files")
